--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,59 +1,63 @@
-<h2>Sign up</h2>
+<h2 class="text-2xl font-bold mb-4 text-center">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), method: :post, multipart: true) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="max-w-md mx-auto mt-10 bg-white p-6 rounded-lg shadow-md">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), method: :post, multipart: true, class: "space-y-4") do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div>
+      <%= f.label :email, class: "block font-medium text-gray-700" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: form_field_classes %>
+    </div>
+
+    <div>
+      <%= f.label :password, class: "block font-medium text-gray-700" %>
+      <% if @minimum_password_length %>
+        <em class="text-sm text-gray-500">(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      <%= f.password_field :password, autocomplete: "new-password", class: form_field_classes %>
+    </div>
+
+    <div>
+      <%= f.label :password_confirmation, class: "block font-medium text-gray-700" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: form_field_classes %>
+    </div>
+
+    <div>
+      <%= f.label :username, class: "block font-medium text-gray-700" %>
+      <%= f.text_field :username, class: form_field_classes %>
+    </div>
+
+    <div>
+      <%= f.label :display_name, class: "block font-medium text-gray-700" %>
+      <%= f.text_field :display_name, class: form_field_classes %>
+    </div>
+
+    <div>
+      <%= f.label :first_name, class: "block font-medium text-gray-700" %>
+      <%= f.text_field :first_name, class: form_field_classes %>
+    </div>
+
+    <div>
+      <%= f.label :last_name, class: "block font-medium text-gray-700" %>
+      <%= f.text_field :last_name, class: form_field_classes %>
+    </div>
+
+    <div>
+      <%= f.label :bio, class: "block font-medium text-gray-700" %>
+      <%= f.text_area :bio, class: form_field_classes %>
+    </div>
+
+    <div>
+      <%= f.label :profile_picture, class: "block font-medium text-gray-700" %>
+      <%= f.file_field :profile_picture, class: "w-full border border-gray-300 rounded-lg p-2" %>
+    </div>
+
+    <div>
+      <%= f.submit "Sign up", class: form_button_classes %>
+    </div>
+  <% end %>
+
+  <div class="text-center mt-4">
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :username %>
-    <%= f.text_field :username %>
-  </div>
-
-  <div class="field">
-    <%= f.label :display_name %>
-    <%= f.text_field :display_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :bio %>
-    <%= f.text_area :bio %>
-  </div>
-
-  <div class="field">
-    <%= f.label :profile_picture %>
-    <%= f.file_field :profile_picture %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
